# hada-p1_2021-22

./: README.md
DCA/: Introduccion.md  Practica 2.md
DCA/Practica6/: CMakeLists.txt  Makefile.am  configure.ac  dca-test.tgz
DCA/Practica6/src/: CMakeLists.txt  calculadora.cpp  calculadora.h
DCA/Practica6/tests/: CMakeLists.txt  boost_test_calculadora.cpp  test_calculadora.cpp
DCA/Practica8/: dca-i18n.tgz  i18n_ejemplo.py  i18n_ejemplo_v2.py
DCA/Tema 1/: Centralizado controlado (CC).md  Conceptos básicos.md  Descentralizado Controlado (DC).md  Descentralizado democrático (DD).md  Dictador benevolente de por vida (BDFL).md  Estructura jerárquica.md  Estructuras típicas.md  Otras estructuras organizativas.md  Otros tipos de Organización de equipo.md  Tema 1.md
DCA/Tema 2/: Consejo para crea equipo de desarrollo.md  Formato de etiquetas de versión.md  Gestión de la rama master.md  Rama de desarrollo (Master) vs Rama estable.md  Rama master.md  Tema 2.md
DCA/Tema 3/: Bugtracking.md  Tipos de errores.md
DCA/Tema 4/: DEB.md  RPM.md  Sistema de paquetes.md  TAR-TGZ-TBZ-TXZ.md
DCA/Tema 5/: Ccache.md  Makefile.md  Tema 5.md
DCA/piedrapapeltijera-1.0/: makefile  piedrapapeltijera  piedrapapeltijera.cc
DCA/practica7/: dca-dbc.tgz
GCS/: Welcome GCS.md
GCS/Cuestionarios -UT con usuarios/: Introducción.md
IC/: 2024-11-04.md  2024-11-25.md  2024-12-02.md  2024-12-09.md  Introducción.md
IW/: 2024-12-17.md  2025-01-16.md  Introducción.md
MADS/: Introducción MADS.md  Introducción.md
Redes/: Interconexión de Redes.md  Modelo de capas de TCP_IP.md  Modelo de capas.md  Redes de computadores.md
SDS/: 2025-02-04.md  Posibles Preguntas.md
TAESS/: 2025-02-05.md  Metodologías agiles - Scrum.md  SCRUM master.md
hada-p1/: HadaP1.cs  Program.cs  readme.md  readme.txt
(+328 files in other folders)
